tests/Checker/everything/errors/5d.vc
void f(int a) { return; }

int main() {
    int b = f(a);
    return 1;
}
